styles/index.css
/* ... */
.card-container .card.special {
  background-color: unset;
  border: none;
  padding-inline: 0;
  margin-top: 0;
}
.card-container .card.special:hover {
  box-shadow: none;
  transform: none;
}
.card-container .card p {
  margin-top: 1em;
  margin-bottom: 0;
  font-weight: 300;
  font-size: 16px;
}

.scrolling-wrapper {
  cursor: grab;
  overflow: auto;
  display: flex;
  flex-wrap: nowrap;
  overflow-x: scroll;
  overflow-y: visible;
  -webkit-overflow-scrolling: touch;
}
.scrolling-wrapper::-webkit-scrollbar {
  display: none;
}
.scrolling-wrapper .card {
  flex: 0 0 auto;
  width: 300px;
  min-height: 400px;
  margin-right: 30px;
}
.scrolling-wrapper .card h5 {
  padding: 15px 15px 0 15px;
}
.scrolling-wrapper .card p {
  font-size: 14px;
  padding: 0 15px;
  font-weight: 300;
  padding-bottom: 0;
}
.scrolling-wrapper .card:last-of-type {
  margin-right: 0;
}

.form-row div:not(:last-child) {
  padding-bottom: 15px;
}

.signupForm {
  visibility: hidden;
}
.signupForm .error-message {
  display: none;
}
.signupForm .success-message {
  display: none;
}
.signupForm.error .error-message {
  display: inline;
}
.signupForm.error .success-message {
  display: none;
}
.signupForm.success .error-message {
  display: none;
}
.signupForm.success .success-message {
  display: inline;
}

:has(.toggle.active) ~ form {
  visibility: visible;
  display: block;
}

@media (max-width: 992px) {
  .m-b-3 {
    margin-bottom: 30px;
  }
}

.p-b-0 {
  padding-bottom: 0 !important;
}

.partner-logo {
  max-width: 100%;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.whatsapp {
  width: 60px;
  height: 60px;
  display: flex;
  border-radius: 50%;
  background-color: #20bf55;
  box-shadow: 0 0 8px 0px rgba(0, 0, 0, 0.35);
  justify-content: center;
  align-items: center;
  animation: fadein 1s ease;
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 10000;
}
.whatsapp-icon {
  height: 35px;
  width: 35px;
}
.whatsapp:hover {
  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.5);
}

/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22../../src/styles/_variables.scss%22,%22../../src/styles/_base.scss%22,%22../../src/styles/_typography.scss%22,%22../../src/styles/_faq.scss%22,%22../../src/styles/_button.scss%22,%22../../src/styles/_header.scss%22,%22../../src/styles/_hero.scss%22,%22../../src/styles/_compare.scss%22,%22../../src/styles/_bounce.scss%22,%22../../src/styles/index.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAUA;EACI,kBAPc;EAQd,cARc;;AAUd;EACI;;;AAIR;EACI,OAhBc;;AAiBd;EAEA,OApBY;;;AAyBhB;EACI,OAzBc;EA0Bd,cA1Bc;;AA4Bd;EACI,OAjCA;EAkCA,kBA/BQ;EAgCR,cAhCQ;;;ACHhB;EACI;EACA;EACA;;;AAGJ;EACI;;;AAGJ;AAAA;EAEI;EACA;;;ACbJ;EACI;;;AAGJ;EACI;;AAEA;EAHJ;IAIQ;;;;AAIR;AAAA;AAAA;EAGI;;;AAIA;EACI;EACA;;AACA;EAHJ;IAIQ;;;AAGR;EACI;EACA;;AACA;EAHJ;IAIQ;;;;ACzBR;EACI;EACA;;AAGJ;EACI;EACA;;AAGJ;EACI;EACA;EACA;EACA;EACA;EACA;;AAEA;EACI;EACA;EACA;EACA;EACA;;AAEA;EACI;EACA,OH5BE;EG6BF;EACA;EACA;;AAGJ;EACI;EACA;EACA,OHrCE;EGsCF;EACA;EACA;EA3CZ;;AA+CI;EACI;EACA;;AAGJ;EApDJ;;AAuDQ;EACI;EAxDZ;;AA2DQ;EACI;EACA;;AAEA;EACI;IACI;;EAEJ;IACI;;;;ACrExB;EACI;EACA;EACA;EACA;;AAEA;EACI;EACA;EACA;EACA;;AAEA;EDXJ;ECaQ;EACA;EACA;EACA;EACA;EACA,YJlBJ;EImBI;;AACA;EDpBR;ECsBY;EACA;EACA;EACA;EACA,YJ3BR;;AI4BQ;ED3BZ;EC6BgB;EACA;EACA;EACA;;AACA;EACI;EACA;EACA;EACA;EACA;EACA;EACA;EACA;EACA;;AAKhB;ED/CJ;ECiDQ;EACA;EACA;EACA;EACA;EACA;EACA;EACA,OJxDJ;EIyDI;EACA;EACA;EACA;;AAIJ;EACI;;AAEI;EACI,YJrEZ;EIsEY;;AAIZ;EACI,OJ3EJ;;;AKCR;EACI;EACA;EACA;EACA;EACA;EACA;EACA;EACA;EACA;;AAEA;EACI;EACA;;AAGJ;EACI;EACA;EACA;;AACA;EAJJ;IAKQ;;;AAIR;EACI;EACA;;AAGJ;EACI;EACA;EACA;EACA;;AACA;EACI;;;ACrCZ;EACI;EACA;EACA;EACA;EACA;EACA;;AAEA;AAAA;EAEI;;AAGJ;EACI;EACA;EACA;;AAGJ;EACI;EACA;EACA;EACA;EACA;EACA;;AAGJ;EACI;EACA;EACA;EACA;EACA;EACA;EACA;EACA;EACA;;AAGJ;EACI;;AAGJ;EACI;EACA;EACA;;;AC/CR;EACI;;;AAGJ;EACI;EACA;EACA;;AAEA;EACI;EACA;EACA;EACA;EACA;;AAEA;AAAA;EAEI,OPdM;;AOgBV;EACI;;AAGJ;EACI;EACA;EACA;EACA,kBPvBJ;EOwBI;EACA;EACA;EACA;EACA;;AAGJ;EACI,OPjCM;EOkCN;EACA;EACA;EACA;EACA;;AACA;EACI;EACA;;AACA;EACI;;AAGJ;EAPJ;IAQQ;;;AAMZ;EACI;EACA;EACA;;AACA;EACI;EACA;EAIA;EACA;EACA;;AALA;EAHJ;IAIQ;;;AAKJ;EACI;;AACA;EAFJ;IAGQ;;;AAKZ;EACI;;AACA;EAFJ;IAGQ;;;AAIR;EACI;;AAEA;EACI;EACA;EACA;EACA;;AAEA;EACI,MP1FhB;EO2FgB;EACA;;;AChGxB;EACC;EACA;EACA;;;AAGD;EACI;EACQ;EACX;EACQ;EACR;EACQ;;;AAGT;EACC;IAKC;IACQ;;EAET;IACC;IACQ;;EAET;IACC;IACQ;;;AAIV;EACC;IAKC;IACQ;;EAET;IACC;IACQ;;EAET;IACC;IACQ;;;ACxCV;EACE;;;AAGF;EACE;EACA;;AAEA;EAJF;IAKI;;;AAGF;EARF;IASI;IACA;;;;AAKJ;EACE;;;AAIF;EACE;EACA;EACA;;;AAGF;EACE;;;AAKA;AAAA;EACE;;AAEA;EAHF;AAAA;IAII;;;AAGF;AAAA;AAAA;AAAA;AAAA;AAAA;EAGE;;AACA;EAJF;AAAA;AAAA;AAAA;AAAA;AAAA;IAKI;;;AAIJ;AAAA;EACE;;AACA;EAFF;AAAA;IAGI;;;;AAMR;EACE,kBTtEmB;;;ASyErB;EACE;EACA;EACA;;AAEA;EACE;EACA,YTlFI;ESmFJ;EACA;EACA,OTjFc;ESkFd;EACA;EACA;EACA;EACA;EACA;EACA;;AAEA;EACE;;AAIF;EAnBF;IAoBI;IACA;IACA;;;AAEF;EACE;;AAGA;EADF;IAEI;;;AAIJ;EACE;EACA;EACA;EACA;;AACA;EACE;EACA;;AAIJ;EACE;EACA;EACA;EACA;;;AAKN;EACE;EACA;EAEA;EACA;EACA;EACA;EACA;;AACA;EACE;;AAGF;EAWE;EACA;EACA;EACA;;AAbA;EACE;;AAEF;EACE;EACA;EACA;EACA;;AAOF;EACE;;;AAYJ;EACE;;;AAKJ;EACE;;AACA;EACE;;AAEF;EACE;;AAGA;EACE;;AAEF;EACE;;AAIF;EACE;;AAEF;EACE;;;AAKN;EACI;EACA;;;AAIF;EADF;IAEI;;;;AAIJ;EACE;;;AAGF;EACE;;;AAGF;EACE;IAAO;;EACP;IAAO;;;AAGT;EACE;EACA;EACA;EACA;EACA;EACA;EACA;EACA;EACA;EAGA;EACA;EACA;EACA;;AAEA;EACI;EACA;;AAEJ;EACE%22,%22file%22:%22index.css%22%7D */

